# ros2_rs_obstacle_detector

./: CMakeLists.txt  package.xml
cfg/: obstacle_detector.yaml
cfg/navigation_cfg/: navigation.ini
launch/: obstacle_detector.launch.py
src/: obstacle_detector.cpp
